# buyladies

./: .gitignore  manage.py  pyproject.toml
banners/: models.py  serializers.py  urls.py  views.py
banners/migrations/: 0001_initial.py
buyladies/: asgi.py  exceptions.py  middleware.py  pagination.py  settings.py  urls.py  wsgi.py
cart/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
core/: exceptions.py  interfaces.py  result.py
coupons/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
coupons/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
orders/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_qa_indexes_and_order_number.py
products/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
products/migrations/: 0001_initial.py  (+1 more)
reviews/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
seeds/: seed_data.py
tests/: conftest.py  test_cart_service.py  test_coupon_service.py  test_orders_service.py  test_products_service.py  test_reviews_service.py  test_users_service.py  test_wishlist_service.py
users/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
wishlist/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
(+34 files in other folders)
