[project]
name = "buyladies"
version = "0.1.0"
description = ""
authors = [
    {name = "qasim0900",email = "qasim_kamran2007@yahoo.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
